--- a/MextFullstackSaaS/MextFullstackSaaS.WebApi/appsettings.json
+++ b/MextFullstackSaaS/MextFullstackSaaS.WebApi/appsettings.json
@@ -16,5 +16,6 @@
     "Issuer": "IconBuilderAi",
     "Audience": "IconBuilderAi"
   },
-  "ReSendApiKey": "re_BkRX9k8D_DGYZmEG5KedisZx4aVAoo25j"
+  "ReSendApiKey": "re_BkRX9k8D_DGYZmEG5KedisZx4aVAoo25j",
+  "OpenAiApiKey": "sk-proj-"
 }
